--- a/client/public/styles/reset.css
+++ b/client/public/styles/reset.css
@@ -1,10 +1,14 @@
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     box-sizing: inherit;
 }
 
 *::before,
 *::after {
+    box-sizing: inherit;
+}
+
+input, a {
     box-sizing: inherit;
 }
