--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -3,3 +3,5 @@
 @import url(champion-card.css);
 @import url(header.css);
 @import url(forms.css);
+@import url(champion-details.css);
+@import url(home.css);
