--- a/client/public/styles/typography.css
+++ b/client/public/styles/typography.css
@@ -4,9 +4,21 @@ html {
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    background: #181818;
+    width: 100dvw;
+    height: 100dvh;
+    background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/33c3ee76009313.5c5ca8e8c3867.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    width: 100%; 
+    height: 100%;  
+    z-index: -1;
+    background-color:rgba(0, 0, 0, 0.5);
 }
 
 :root {
