--- a/client/public/styles/typography.css
+++ b/client/public/styles/typography.css
@@ -6,7 +6,7 @@ html {
 body {
     width: 100dvw;
     height: 100dvh;
-    background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/33c3ee76009313.5c5ca8e8c3867.jpg');
+    background-image: url('https://wallpaperset.com/w/full/7/9/7/534842.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
