--- a/client/public/styles/header.css
+++ b/client/public/styles/header.css
@@ -5,6 +5,12 @@
     justify-content: space-between;
 }
 
+nav {
+    background: #222;
+    padding: 1em;
+    border-radius: 0.5em;
+}
+
 .list {
     display: flex;
     text-decoration: none;
