--- a/client/public/styles/champion-details.css
+++ b/client/public/styles/champion-details.css
@@ -12,7 +12,7 @@
 
 main {
     display: flex;
-    justify-content: center;
+    justify-content: end;
     flex-direction: column;
     flex-basis: 70%;
 }
@@ -26,19 +26,20 @@ h1 {
     color: white;
     font-size: larger;
     margin: 1em 0;
-    width: 50ch;
+    max-width: 50ch;
 }
 
 input[type="submit"] {
     cursor: pointer;
-    font-size: 52px;
+    font-size: 42px;
     padding: 0.2em;
     border-radius: 0.5em;
     background-color: #222;
     color: #0f0;
     margin-top: 0.5em;
+    max-width: 50ch;
 }
 
-aside {
-    margin-right: 5em;
+aside img {
+ max-width: 100%;
 }
