--- a/client/public/styles/champion-card.css
+++ b/client/public/styles/champion-card.css
@@ -1,4 +1,4 @@
-.container {
+.card-container {
     display: flex;
     margin: 3em 2em;
     gap: 2em;
@@ -14,7 +14,8 @@
     align-items: flex-end;
     padding: 0 36px;
     perspective: 2500px;
-    margin: 2em 0em;
+    margin-top: 3em;
+    margin-bottom: 1em;
 }
 
 .cover-image {
@@ -107,4 +108,8 @@ a {
 .card:hover .character {
     opacity: 1;
     transform: translate3d(0%, -30%, 100px);
+}
+
+.created-by {
+    color: white
 }
