--- a/client/public/styles/champion-details.css
+++ b/client/public/styles/champion-details.css
@@ -12,7 +12,7 @@
 
 main {
     display: flex;
-    justify-content: end;
+    justify-content: center;
     flex-direction: column;
     flex-basis: 70%;
 }
