--- a/client/public/styles/header.css
+++ b/client/public/styles/header.css
@@ -4,6 +4,8 @@
     justify-content: space-between;
     top: 0;
     background-color: #181818;
+    z-index: 1;
+    position: relative;
 }
 
 nav {
