--- a/client/public/styles/champion-details.css
+++ b/client/public/styles/champion-details.css
@@ -26,17 +26,20 @@ h1 {
     color: white;
     font-size: larger;
     margin: 1em 0;
-    max-width: 60ch;
+    max-width: 65ch;
+    line-height: 1.8;
 }
 
-input[type="submit"] {
-    cursor: pointer;
-    font-size: 22px;
-    padding: 0.2em;
-    border-radius: 0.5em;
+.edit {
+    width: 250px;
+    text-align: center;
+    font-size: 24px;
+    padding: 0.3em;
+    border-radius: 0.3em;
     background-color: #222;
     color: #0f0;
     margin-top: 0.5em;
+    border: 2px solid black;
 }
 
 aside img {
