--- a/client/public/styles/home.css
+++ b/client/public/styles/home.css
@@ -35,7 +35,8 @@
 }
 
 #homeLogo {
-    width: 45%;
+    width: 35%;
     opacity: 0.5;
-    margin-left: 27vw;
+    margin-left: 33vw;
+    margin-top: 1em;
 }
